# tinyLLM

./: .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  LINKEDIN_ARTICLE.md  MHA_CHEATSHEET.md  MHA_GUIDE.md  Makefile  Notes.md  PART2_SUMMARY.md  PIPELINE.md  PRODUCTION.md  QUICK_START.md  README.md  TEST_RESULTS.md  _temp_unigram_model.model  _temp_unigram_model.vocab  bpe_tokenizer.py  demo.py  docker-compose.yml  main.py  mha_examples.py  multi_head_attention.py  pg7988.txt  prometheus.yml  pyproject.toml  test_mha_german.py  train_tokenizer.py  train_transformer.py  transformer_block.py
.github/workflows/: ci.yml
scripts/: __init__.py  comparision.py  train_tokenizer_hf.py
tests/: __init__.py  test_model.py  test_tokenizer.py
tinyllm/: __init__.py  config.py  data.py  generate.py  model.py  tokenizer.py  train.py
tinyllm/export/: __init__.py  gguf_export.py  onnx_export.py
tinyllm/serving/: __init__.py  app.py  middleware.py  schemas.py
